# slope_inspection

./: README.md
IPC/: CMakeLists.txt  README.md  package.xml
IPC/config/: env_back_ipc.rviz  env_real.rviz  env_sim.rviz  env_vicon.rviz  indoor.yaml  indoor_lab.yaml  outdoor.yaml  param_gazebo.yaml  param_real copy.yaml  param_real.yaml  param_sim.yaml  param_sim_dyn.yaml  param_vicon.yaml  time.csv
IPC/include/: astar_rm.cpp  astar_rm.h  callback.cpp  callback.h  ciri.cpp  ciri.h  emvp.cpp  emvp.h  mpc.cpp  mpc.h
IPC/launch/: indoor.launch  indoor_lab.launch  ipc_env.launch  ipc_gazebo.launch  ipc_real.launch  ipc_sim.launch  ipc_vicon.launch  outdoor.launch
IPC/src/: ipc_fsm.cpp  ipc_fsm.h  main_ipc.cpp
joy_rc/: CMakeLists.txt  package.xml
joy_rc/launch/: BT_x1.launch  car_ctrl.launch  key_ctrl.launch
joy_rc/src/: BT_x1.cpp  car_ctrl.cpp  key_ctrl.cpp  subs_rc.cpp
mars_base/: CMakeLists.txt  package.xml
mars_base/include/: mars_led.cpp  mars_led.hpp
mars_base/launch/: launch_led.launch  mars_led.launch  swarm_led.launch
mars_base/msg/: BuckParam.msg  WS2812.msg
mars_base/src/: launch_led.cpp  mars_led_node.cpp  mars_led_test.cpp  mars_rc.cpp  swarm_led.cpp  ws2812_ctrl.cpp
mars_base/test/: usb_reset  usb_reset.cpp
mars_planning_utils/: README.md
mars_planning_utils/mars_planning_utils/: CMakeLists.txt  package.xml
mars_planning_utils/mars_planning_utils/benchmark_utils/: CMakeLists.txt
mars_planning_utils/mars_planning_utils/benchmark_utils/include/benchmark_utils/: cpu_memory_query.h  scope_timer.h
mars_planning_utils/mars_planning_utils/benchmark_utils/src/: cpu_memory_query.cpp  scope_timer.cpp
mars_planning_utils/mars_planning_utils/debug_utils/: CMakeLists.txt
mars_planning_utils/mars_planning_utils/debug_utils/src/: backward.cpp
mars_planning_utils/mars_planning_utils/geometry_utils/: CMakeLists.txt
mars_planning_utils/mars_planning_utils/geometry_utils/include/geometry_utils/: banded_system.h  ellipsoid.h  geometry_utils.h  piece.h  polynomial_interpolation.h  polytope.h  raycaster.h  tailsitter_aerodyn.hpp  trajectory.h
mars_planning_utils/mars_planning_utils/geometry_utils/src/: banded_system.cpp  ellipsoid.cpp  geometry_utils.cpp  piece.cpp  polynomial_interpolation.cpp  polytope.cpp  quickhull.cpp  raycaster.cpp  trajectory.cpp
mars_planning_utils/mars_planning_utils/math_utils/: CMakeLists.txt
mars_planning_utils/mars_planning_utils/math_utils/src/: lbfgs.cpp  root_finder.cpp  sdlp.cpp
mars_planning_utils/mars_planning_utils/math_utils/test/: lbfgs_test.cpp  root_finder_test.cpp
mars_planning_utils/mars_planning_utils/optimization_utils/: CMakeLists.txt
mars_planning_utils/mars_planning_utils/optimization_utils/include/optimization_utils/: minco.h  mvie.h  optimization_utils.h  waypoint_trajectory_optimizer.h
mars_planning_utils/mars_planning_utils/optimization_utils/src/: minco.cpp  mvie.cpp  optimization_utils.cpp  waypoint_trajectory_optimizer.cpp
mars_planning_utils/mars_planning_utils/test/: minco_fix_pv.cpp  poly_interpo_test.cpp  root_finder_test.cpp  test_mars_planning_utils.cpp
mars_planning_utils/mars_planning_utils/type_utils/: CMakeLists.txt
mars_planning_utils/mars_planning_utils/type_utils/include/type_utils/: common_type_name.h
mars_planning_utils/mars_planning_utils/type_utils/src/: common_type_name.cpp
mars_planning_utils/mars_planning_utils/visualization_utils/: CMakeLists.txt
mars_planning_utils/mars_planning_utils/visualization_utils/include/visualization_utils/: visualization_utils.h
mars_planning_utils/mars_planning_utils/visualization_utils/src/: visualization_utils.cpp
mars_planning_utils/odom_visualization/: CMakeLists.txt
mars_planning_utils/odom_visualization/meshes/: uav-slope.dae
mars_planning_utils/odom_visualization/src/: odom_visualization.cpp
mars_planning_utils/viz_toolkit/: CMakeLists.txt  package.xml
mars_planning_utils/viz_toolkit/Apps/: draw_bounding_box.cpp  draw_odom.cpp  draw_pointcloud_map.cpp
mars_planning_utils/viz_toolkit/config/: cfg.yaml
mars_planning_utils/viz_toolkit/launch/: draw.launch  draw_odom_mesh.launch
mars_planning_utils/waypoint_traj_gene/: CMakeLists.txt  package.xml
mars_planning_utils/waypoint_traj_gene/Apps/: rc_waypoint_recorder.cpp  waypoint_planner_node.cpp
mars_planning_utils/waypoint_traj_gene/config/: waypoint_planner.yaml
mars_planning_utils/waypoint_traj_gene/data/: bee.txt  dimond11.txt  dimond15.txt  dimond7.txt  racing.txt  star_mission.txt  tracking.txt  xiaojian2.txt  xiaojian3.txt
mars_planning_utils/waypoint_traj_gene/include/traj_opt/: config.hpp  waypt_traj_opt.hpp
mars_planning_utils/waypoint_traj_gene/include/waypoint_traj_gene/: config.hpp  waypoint_traj_gene.hpp
mars_planning_utils/waypoint_traj_gene/launch/: rc_waypoints_recorder.launch  waypoint_planner.launch
mars_uav_sim/perfect_drone_sim/: CMakeLists.txt
mars_uav_sim/test_interface/config/: default.rviz  fpv.rviz  map_complex.yaml  map_faster.yaml  poly_planner.rviz
mars_uav_sim/test_interface/launch/: map.launch  map_dyn.launch  so3_quadrotor_sim.xml
mars_uav_sim/uav_simulator/depth_gene/: CMakeLists.txt
mars_uav_sim/uav_simulator/random_map_generator/: CMakeLists.txt
rog_map/: CMakeLists.txt  mars_path_search.md  package.xml
rog_map/Apps/: dynamic_obstacle_test.cpp  path_search_test.cpp  rog_test_with_bag.cpp  rogmap_test_node.cpp  viz_real_bag.cpp
rog_map/config/: default.rviz  rog.yaml  rog_back.yaml  viz_bag.yaml  viz_real.rviz
rog_map/example/: example_astar_search.cpp  rolling_map_test.cpp
rog_map/include/ikd_tree/: ikd_Tree.cpp  ikd_Tree.h
rog_map/include/path_search/: astar.h  config.hpp
rog_map/include/rog_map/: config.h  free_cnt_map.h  inf_map.h  prob_map.h  rog_map.h  sliding_map.h
rog_map/launch/: rog.launch  run_in_rviz.launch  rviz.launch  viz_real_bag.launch
rog_map/log/: plot_inf_map.py  plot_performance_comparison.py  rm_info_log.csv  rm_performance_log.csv
rog_map/src/path_search/: astar.cpp
rog_map/src/rog_map/: config.cpp  inf_map.cpp  prob_map.cpp  rog_map.cpp  sliding_map.cpp
(+7 files in other folders)
