<?xml version="1.0"?>
<package format="2">
  <name>ipc</name>
  <version>0.0.0</version>
  <description>The ipc package</description>
  <maintainer email="liuwenyi@connect.hku.hk">MARS</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>mars_base</build_depend>
  <exec_depend>mars_base</exec_depend>
  <build_depend>rog_map</build_depend>
  <exec_depend>rog_map</exec_depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
