<?xml version="1.0"?>
<package format="2">
  <name>mars_base</name>
  <version>0.0.0</version>
  <description>The mars_base package</description>
  <maintainer email="liuwenyi@connect.hku.hk">MARS</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>message_generation</build_depend>
  <exec_depend>message_runtime</exec_depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
